[gd_scene load_steps=2 format=3 uid="uid://bmgpgk06mlryw"]

[ext_resource type="Script" uid="uid://5tj30k5ye8kn" path="res://scripts/damagezone.gd" id="1_rg5yr"]

[node name="Damagezone" type="Area2D"]
script = ExtResource("1_rg5yr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
